reviewProject/src/main/java/org/example/multithreading/blockingqueue/TestBlockingQueue.java
package org.example.multithreading.blockingqueue;

import java.util.concurrent.BlockingQueue;
import java.util.concurrent.LinkedBlockingQueue;

public class TestBlockingQueue {
    public static void main(String[] args) {
        BlockingQueue<Integer> queue = new LinkedBlockingQueue<>(3);
        // Producer
        new Thread(() -> {
            int i = 0;
            while (true) {
                try {
                    queue.put(++i);
                    System.out.println("put: " + i);
                    System.out.println(queue);
                    Thread.sleep(3000);
//                    queue.put(null); // error
                } catch (InterruptedException e) {
                    throw new RuntimeException(e);
                }
            }
        }).start();

        // Consumer
        new Thread(() -> {
            while (true) {
                try {
                    int result = queue.take();
                    System.out.println(queue);
                    System.out.println("take: " + result);
                    Thread.sleep(9000);
                } catch (InterruptedException e) {
                    throw new RuntimeException(e);
                }
            }
        }).start();
    }
}
